@@ -2,6 +2,7 @@ MSAL Wiki : https://github.com/AzureAD/microsoft-authentication-library-for-andr
 
 vNext
 ----------
+[MINOR] Give BrokerMsalController higher priority than LocalMsalController if available (#2040)
 
 Version 5.1.0
 ----------
